Increase font_size to 13.0

--- a/kitty.conf
+++ b/kitty.conf
@@ -53,3 +53,5 @@ color14                 #8ec07c
 # white (fg4/fg3)
 color7                  #a89984
 color15                 #bdae93
+
+font_size 13.0
